[package]
name = "volley"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
base64 = "0.21.4"
rand = "0.8.5"
regex = "1.10.0"
rsa = "0.9.2"
serde = { version = "1.0.188", features = ["derive"] }
sha256 = "1.4.0"
shuttle-actix-web = "0.29.0"
shuttle-runtime = "0.29.0"
tokio = "1.26.0"
url = "2.4.1"
